@@ -31,7 +31,7 @@
 
   <groupId>io.wcm</groupId>
   <artifactId>io.wcm.testing.aem-mock</artifactId>
-  <version>1.6.4</version>
+  <version>1.7.0</version>
   <packaging>bundle</packaging>
 
   <name>AEM Mocks</name>
@@ -47,12 +47,12 @@
   <properties>
     <site.url.module.prefix>testing/aem-mock</site.url.module.prefix>
 
-    <jcr-mock.version>1.1.10</jcr-mock.version>
-    <osgi-mock.version>1.7.0</osgi-mock.version>
-    <sling-mock.version>1.6.0</sling-mock.version>
+    <jcr-mock.version>1.1.12</jcr-mock.version>
+    <osgi-mock.version>1.7.2</osgi-mock.version>
+    <sling-mock.version>1.6.2</sling-mock.version>
     <sling-mock.oak.version>1.0.0</sling-mock.oak.version>
     <sling-mock.jackrabbit.version>1.0.0</sling-mock.jackrabbit.version>
-    <resourceresolver-mock.version>1.1.10</resourceresolver-mock.version>
+    <resourceresolver-mock.version>1.1.12</resourceresolver-mock.version>
     <logging-mock.version>1.0.0</logging-mock.version>
     
     <oak.version>1.2.2</oak.version>
@@ -232,6 +232,20 @@
       </plugin>
 
     </plugins>
+    <pluginManagement>
+      <plugins>
+      
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <!-- Travis build workaround, see https://github.com/travis-ci/travis-ci/issues/3396 -->
+            <argLine>-Xmx1024m -XX:MaxPermSize=512M</argLine>
+          </configuration>
+        </plugin>
+
+      </plugins>
+    </pluginManagement>
   </build>
 
   <reporting>
